# dj_store

./: .gitignore  Dockerfile  main.py  manage.py  pyproject.toml  start_gunicorn.sh  store_mg_inventoryitem_202508020904.json
api/: serializers.py  urls.py  views.py
inventory/: context_processors.py  models.py  urls.py  views.py
inventory/migrations/: 0001_initial.py  0002_inventorycategory_display_name.py  0003_inventoryitemtype_and_more.py  0004_alter_inventoryitem_item_type.py  0005_remove_inventoryitem_unique_item_per_type_and_more.py  0006_alter_inventoryitemtype_options_and_more.py  0007_inventoryitem_display_name.py  0008_alter_inventorycategory_display_name_and_more.py
inventory/templates/inventory/: category_items.html  home.html  product_detail.html
store_mg/: admin.py  asgi.py  models.py  settings.py  urls.py  views.py  wsgi.py
store_mg/migrations/: 0001_initial.py
store_mg/templates/: base.html
store_mg/templates/inventory/: home.html
